--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -177,7 +177,7 @@
   <br>
   <hr>
   <a href="editor">
-    <button type="button" class="btn btn-success">CREATE CHARACTER
+    <button type="button" class="btn btn-info2" style="margin-bottom: 20px;">CREATE CHARACTER
     </button>
   </a>
   <hr>
