--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,7 @@
     color: red;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
+    background-clip: text;
     font-weight: bold;
     font-size: 80px;
     font-family: arial, helvetica;
@@ -35,7 +36,7 @@
   body {
      
     background-size: contain;
-    background-image: url(../images/map-background.jpg);
+    background-image: url('../images/map-background.jpg');
     background-position: center;
     background-repeat: repeat;
    }
@@ -182,33 +183,33 @@
    width: 20px;
    height: 20px;
    /* border-radius: 50%; */
-   background: url(../images/dice.png);
+   background: url('../images/dice.png');
    cursor: pointer;
    /* transition: background 0.15s ease-in-out; */
  }
  .range-slider__range::-webkit-slider-thumb:hover {
-  background: url(../images/dice.png);
+  background: url('../images/dice.png');
  }
  .range-slider__range:active::-webkit-slider-thumb {
-  background: url(../images/dice.png);
+  background: url('../images/dice.png');
  }
  .range-slider__range::-moz-range-thumb {
    width: 20px;
    height: 20px;
    /* border: 0;
    border-radius: 50%; */
-   background: url(../images/dice.png);
+   background: url('../images/dice.png');
    cursor: pointer;
    /* transition: background 0.15s ease-in-out; */
  }
  .range-slider__range::-moz-range-thumb:hover {
-  background: url(../images/dice.png);
+  background: url('../images/dice.png');
  }
  .range-slider__range:active::-moz-range-thumb {
-  background: url(../images/dice.png);
+  background: url('../images/dice.png');
  }
  .range-slider__range:focus::-webkit-slider-thumb {
-  background: url(../images/dice.png);
+  background: url('../images/dice.png');
  }
  
  .range-slider__value {
