--- a/views/stats.handlebars
+++ b/views/stats.handlebars
@@ -9,36 +9,36 @@
                 <li role="presentation" class="active">
                     <a href="#traits" role="tab" data-toggle="tab">
                         <h3>TRAITS</h3>
-                        <p><img src="../public/images/person.png"></p>
+                        <p><img src="../images/person.png"></p>
                     </a>
                 </li>
                 <li role="presentation">
                     <a href="#feats" role="tab" data-toggle="tab">
                         <h3>FEATS</h3>
-                        <p><img src="../public/images/trophy.png"></p>
+                        <p><img src="../images/trophy.png"></p>
                     </a>
                 </li>
                 <li role="presentation">
                     <a href="#skills" role="tab" data-toggle="tab">
                         <h3>SKILLS</h3>
-                        <p><img src="../public/images/anvil.png"></p>
+                        <p><img src="../images/anvil.png"></p>
                     </a>
                 </li>
                 <li role="presentation">
                     <a href="#items" role="tab" data-toggle="tab">
                         <h3>ITEMS</h3>
-                        <p><img src="../public/images/sword.png"></p>
+                        <p><img src="../images/sword.png"></p>
                     </a>
                 </li>
                 <li role="presentation">
                     <a href="#spells" role="tab" data-toggle="tab">
                         <h3>SPELLS</h3>
-                        <p><img src="../public/images/magic.png"></p>
+                        <p><img src="../images/magic.png"></p>
                     </a>
                 <li role="presentation">
                     <a href="#charSheet" role="tab" data-toggle="tab">
                         <h3>Overview</h3>
-                        <p><img src="../public/images/heart.png"></p>
+                        <p><img src="../images/heart.png"></p>
                     </a>
                 </li>
                 </li>
